crates/sm-bind/tests/snapshots/java_scenarios__deleted_helper_with_a_new_call_to_it.snap
---
source: crates/sm-bind/tests/java_scenarios.rs
expression: s.render()
---
tree merge: clean
references: 1 (resolved in origin 1, unresolved in origin 0), skipped conflict regions: 0
semantic conflicts: 1

  [broken_reference] `helper`
  reference: theirs "helper"
  was: method `helper` in theirs scope `class_declaration`
  `ours` removed method `helper`; the reference to `helper` from `theirs` no longer resolves in the merged result.
