crates/sm-bind/tests/snapshots/java_scenarios__rename_on_one_side_new_call_on_the_other_mirrored.snap
---
source: crates/sm-bind/tests/java_scenarios.rs
expression: s.render()
---
tree merge: clean
references: 11 (resolved in origin 5, unresolved in origin 6), skipped conflict regions: 0
semantic conflicts: 1

  [broken_reference] `getUser`
  reference: ours "getUser"
  was: method `getUser` in ours scope `class_declaration`
  `theirs` renamed method `getUser` to `fetchUser`; the reference to `getUser` from `ours` still says `getUser`, which no longer resolves in the merged result.
