crates/sm-bind/tests/snapshots/java_scenarios__renamed_class_with_a_new_reference_to_the_old_type.snap
---
source: crates/sm-bind/tests/java_scenarios.rs
expression: s.render()
---
tree merge: clean
references: 3 (resolved in origin 3, unresolved in origin 0), skipped conflict regions: 0
semantic conflicts: 1

  [broken_reference] `Foo`
  reference: theirs "Foo"
  was: class `Foo` in theirs scope `program`
  `ours` renamed class `Foo` to `Bar`; the reference to `Foo` from `theirs` still says `Foo`, which no longer resolves in the merged result.
