crates/sm-bind/tests/snapshots/java_scenarios__renamed_field_with_a_new_use_of_the_old_name.snap
---
source: crates/sm-bind/tests/java_scenarios.rs
expression: s.render()
---
tree merge: clean
references: 3 (resolved in origin 3, unresolved in origin 0), skipped conflict regions: 0
semantic conflicts: 1

  [broken_reference] `count`
  reference: theirs "count"
  was: field `count` in theirs scope `class_declaration`
  `ours` renamed field `count` to `total`; the reference to `count` from `theirs` still says `count`, which no longer resolves in the merged result.
